# amharic-dataset-mcp

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml  test_amharic_tools.py
.github/workflows/: test.yml
examples/: mcp_usage.py
src/amharic_dataset_mcp/: __init__.py
src/amharic_dataset_mcp/database/: manager.py
src/amharic_dataset_mcp/server/: main.py
src/amharic_dataset_mcp/tools/: collector.py  enhancer.py  scorer.py
tests/: test_mcp_server.py
