[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amharic-dataset-mcp"
version = "1.0.0"
description = "MCP tools for authentic Amharic dataset collection, enhancement, and quality scoring"
authors = [
    {name = "Amharic Language AI Team"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["amharic", "ethiopian", "nlp", "dataset", "mcp", "language-model"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic"
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "asyncio-mqtt>=0.11.0",
    "httpx>=0.24.0",
    "aiosqlite>=0.19.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0"
]

gpu = [
    "faiss-gpu>=1.7.0",
    "torch>=1.13.0"
]

[project.urls]
Homepage = "https://github.com/amharic-ai/amharic-dataset-mcp"
Repository = "https://github.com/amharic-ai/amharic-dataset-mcp"
Documentation = "https://github.com/amharic-ai/amharic-dataset-mcp/docs"
"Issues" = "https://github.com/amharic-ai/amharic-dataset-mcp/issues"

[project.scripts]
amharic-dataset-server = "amharic_dataset_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/amharic_dataset_mcp --cov-report=html --cov-report=term-missing"